--- a/css/main.scss
+++ b/css/main.scss
@@ -8,7 +8,7 @@ overflow-x: hidden;
 }
 body{
     background-color: #FAFAFA;
-    font-family: "Play Display";
+    font-family: "Playfair Display";
     margin: 0;
 }
 
