--- a/css/main.scss
+++ b/css/main.scss
@@ -71,7 +71,8 @@ body{
 
 .sec{
     line-height: 30px;
-    font-size: 20px;
+    font-size: 18px;
+    font-weight:500;
     color: #2E2E2E;
     letter-spacing: .5px;
     font-weight: 200;
