--- a/css/main.css
+++ b/css/main.css
@@ -63,20 +63,23 @@ body {
   font-size: 20px;
   color: #2E2E2E;
   letter-spacing: 0.5px;
-  font-weight: 200;
+  
 }
 
 h1, h2, h3, h4, h5 {
   color: #48C6FD;
   font-size: 30px;
   font-weight: bold;
-  margin-left: 3%;
+  margin-left: 4%;
 }
 
 .sec p {
-  margin-left: 3%;
-  margin-right: 3%;
+  margin-left: 4%;
+  margin-right: 4%;
   margin-bottom: 4em;
+  font-size:18px;
+  font-weight:400;
+  
 }
 
 .sec header {
